--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
 # Copyright (c) 2005, 2016 Oracle and/or its affiliates. All rights reserved.
@@ -55,6 +59,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/GUIFormExamples.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.LibGuiReusables.jar=E:\\Javi\\UNED\\proyectos java netbeans\\LibGuiReusables\\dist\\LibGuiReusables.jar
 includes=**
@@ -65,6 +70,9 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
@@ -81,9 +89,10 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=TestLibGuiReusables.Main
+main.class=TestLibGuiReusables.CrearFormularioSimple
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
