--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -61,12 +61,11 @@ dist.jar=${dist.dir}/GUIFormExamples.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.LibGuiReusables.jar=E:\\Javi\\UNED\\proyectos java netbeans\\LibGuiReusables\\dist\\LibGuiReusables.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.LibGuiReusables.jar}:\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${reference.LibGuiReusables.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -89,11 +88,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=TestLibGuiReusables.CrearFormularioSimple1
+main.class=TestLibGuiReusables.MenuPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.LibGuiReusables=../LibGuiReusables
+reference.LibGuiReusables.jar=${project.LibGuiReusables}/dist/LibGuiReusables.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
