--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -88,7 +88,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=TestLibGuiReusables.MenuPrincipal
+main.class=MenuPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
